--- a/src/main/res/layout/map.xml
+++ b/src/main/res/layout/map.xml
@@ -12,6 +12,18 @@
         android:layout_height="fill_parent"
         android:layout_alignParentStart="true"/>
 
+<!--    <Button-->
+<!--        android:id="@+id/supabutton"-->
+<!--        android:layout_width="wrap_content"-->
+<!--        android:layout_height="wrap_content"-->
+<!--        android:text="I'm a shrey"-->
+<!--        android:layout_alignParentBottom="true"-->
+<!--        android:layout_alignParentStart="true"-->
+<!--        android:layout_alignParentLeft="true"/>-->
+<!--&lt;!&ndash;`       android:layout_centerVertical="true"/>&ndash;&gt;-->
+
+
+
     <TextView
         android:id="@+id/share_picture_title"
         android:layout_width="match_parent"
@@ -47,6 +59,7 @@
         android:layout_marginBottom="8dp"
         android:layout_marginEnd="8dp">
 
+
         <ImageButton
             android:id="@+id/fullscreenButton"
             android:layout_width="wrap_content"
@@ -54,6 +67,8 @@
             android:background="@android:color/transparent"
             android:src="@drawable/ic_baseline_fullscreen_48"
             android:contentDescription="@string/toggle_full_screen_mode" />
+
+
 
     </LinearLayout>
 
