--- a/src/main/res/layout/options_activity.xml
+++ b/src/main/res/layout/options_activity.xml
@@ -11,13 +11,14 @@
         android:orientation="vertical"
         android:layout_centerInParent="true">
 
+
     <RadioButton
         android:id="@+id/radioButton1"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Option 1"
         android:layout_marginTop="16dp"
-        android:checked="true" />
+        android:checked="false" />
 
     <RadioButton
         android:id="@+id/radioButton2"
