--- a/src/main/res/layout/option1.xml
+++ b/src/main/res/layout/option1.xml
@@ -4,13 +4,37 @@
     android:layout_height="match_parent"
     android:background="@android:color/white">
 
+<!--    <TextView-->
+<!--        android:id="@+id/option1"-->
+<!--        android:layout_width="wrap_content"-->
+<!--        android:layout_height="wrap_content"-->
+<!--        android:layout_centerInParent="true"-->
+<!--        android:text="Hello World!"-->
+<!--        android:textColor="@android:color/black"-->
+<!--        android:textSize="24sp" />-->
+
+
+
     <TextView
-        android:id="@+id/option1"
+        android:id="@+id/chartLabel"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_centerInParent="true"
-        android:text="Hello World!"
+        android:layout_alignParentTop="true"
+        android:layout_centerHorizontal="true"
+        android:text="Distance(KM)"
         android:textColor="@android:color/black"
-        android:textSize="24sp" />
+        android:textSize="18sp"/>
+<!--        android:layout_marginStart="16dp"-->
+<!--        android:layout_marginTop="16dp" -->
+
+    <com.github.mikephil.charting.charts.BarChart
+        android:id="@+id/barChart"
+        android:layout_width="match_parent"
+        android:layout_height="300dp"
+        android:layout_below="@id/chartLabel" /> <!-- Position below the label -->
+<!--        android:layout_marginStart="16dp"-->
+<!--        android:layout_marginTop="8dp" &lt;!&ndash; Adjust top margin as needed &ndash;&gt;-->
+<!--        android:layout_marginEnd="16dp" />-->
+
 
 </RelativeLayout>
