--- a/src/main/res/values/dimens.xml
+++ b/src/main/res/values/dimens.xml
@@ -4,4 +4,9 @@
     <dimen name="attribution_size">4pt</dimen>
     <dimen name="standard_padding">16dp</dimen>
     <dimen name="standard_list_item_size">72dp</dimen>
+
+    <!-- Table dimensions -->
+    <dimen name="table_padding_horizontal">16dp</dimen>
+    <dimen name="table_padding_vertical">8dp</dimen>
+    <dimen name="table_item_height">48dp</dimen>
 </resources>
