--- a/src/main/res/layout/map.xml
+++ b/src/main/res/layout/map.xml
@@ -6,7 +6,7 @@
     android:layout_width="fill_parent"
     android:layout_height="fill_parent">
 
-    <de.storchp.opentracks.osmplugin.maps.CustomMapView
+    <de.storchp.opentracks.osmplugin.maps.TrailSelectionMapView
         android:id="@+id/mapView"
         android:layout_width="match_parent"
         android:layout_height="match_parent"/>
